Poboljšan SEO txt

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Naslov i opis (Globalni SEO) -->
-    <title>Eduformacije - Najveći AI Pretraživač Škola u Hrvatskoj</title>
+    <title>Eduformacije</title>
     <meta
       name="description"
-      content="Eduformacije je najveći i najnapredniji AI pretraživač škola u Hrvatskoj. Otkrijte idealnu srednju školu ili program uz personalizirane preporuke temeljem vaših interesa!"
+      content="Eduformacije - najveći i najnapredniji AI pretraživač škola u Hrvatskoj. Pronađi idealnu srednju školu uz preporuke temeljene na tvojim interesima!"
     />
     <meta
       name="keywords"
@@ -18,31 +18,22 @@
     <meta name="author" content="Dobren Dragojević" />
 
     <!-- Favicons i Manifest (PWA) -->
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="96x96"
-      href="/favicon-96x96.png"
-    />
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="shortcut icon" href="/favicon.ico" />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="/apple-touch-icon.png"
-    />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-title" content="EduF" />
     <link rel="manifest" href="/site.webmanifest" />
 
     <!-- Open Graph (društvene mreže) -->
-    <meta 
+    <meta
       property="og:title"
       content="Eduformacije - Najveći AI Pretraživač Škola"
     />
     <meta
       property="og:description"
-      content="S našim inovativnim AI sustavom, brzo pronađite idealnu srednju školu ili program. 
-               Dobivate personalizirane preporuke prema vašim interesima!"
+      content="S našim inovativnim AI sustavom, brzo pronađi idealnu srednju školu ili program. 
+             Dobij preporuke temeljene na tvojim interesima i željama."
     />
     <meta property="og:url" content="https://eduformacije.com" />
     <meta property="og:type" content="website" />
@@ -59,8 +50,9 @@
     />
     <meta
       name="twitter:description"
-      content="Otkrijte idealnu srednju školu ili program uz pomoć AI savjetnika."
+      content="Otkrij idealnu srednju školu ili program uz pomoć naprednog AI sustava."
     />
+
     <meta
       name="twitter:image"
       content="https://beta.eduformacije.com/og-image.png"
