Popravljen responsive te dodana nova stranica koja prikazuje ponuđene srednje škole

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -3,7 +3,8 @@
   <head>
     <!-- Osnovne postavke -->
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+
 
     <!-- Naslov i opis (Globalni SEO) -->
     <title>Eduformacije</title>
@@ -61,7 +62,7 @@
     <!-- Boja browser trake (na mobilnim uređajima) -->
     <meta name="theme-color" content="#000000" />
   </head>
-  <body>
+  <body style="margin: 0; padding: 0;">
     <!-- Upozorenje ako je korisnik onemogućio JavaScript -->
     <noscript>
       Potrebno je omogućiti JavaScript da biste koristili ovu aplikaciju.
