--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <!-- Osnovne postavke -->
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 
 
     <!-- Naslov i opis (Globalni SEO) -->
