--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -3,8 +3,10 @@
   <head>
     <!-- Osnovne postavke -->
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=no"
+    />
 
     <!-- Naslov i opis (Globalni SEO) -->
     <title>Eduformacije</title>
@@ -61,8 +63,10 @@
 
     <!-- Boja browser trake (na mobilnim uređajima) -->
     <meta name="theme-color" content="#000000" />
+
+    <link rel="canonical" href="https://eduformacije.com/" />
   </head>
-  <body style="margin: 0; padding: 0;">
+  <body style="margin: 0; padding: 0">
     <noscript>
       Potrebno je omogućiti JavaScript da biste koristili ovu aplikaciju.
     </noscript>
